--- a/package.json
+++ b/package.json
@@ -13,15 +13,14 @@
     "url": "https://github.com/Zyrex24/symbol-arcade.git"
   },
   "scripts": {
-    "prebuild": "node scripts/build-wasm.mjs",
     "dev": "vite",
     "dev:watch": "concurrently \"bun run wasm:watch\" \"vite\"",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "wasm:build": "node scripts/build-wasm.mjs",
-    "wasm:clean": "rimraf wasm_build public/wasm && node scripts/build-wasm.mjs",
-    "wasm:watch": "nodemon --watch cpp --ext cpp --exec \"node scripts/build-wasm.mjs\""
+    "wasm:build": "bash make.sh",
+    "wasm:clean": "bash make.sh clean && bash make.sh",
+    "wasm:watch": "nodemon --watch cpp --ext cpp --exec \"bash make.sh\""
   },
   "dependencies": {
     "react": "^19.1.0",
