fix: resolve Rollup dependency issue for Vercel deployment
- Downgrade Vite to v6.0.5 to avoid Rollup native binary issues
- Add .npmrc to configure npm for better compatibility
- Add build:clean script for troubleshooting

--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,6 @@
 {
   "framework": "vite",
-  "buildCommand": "npm run build",
+  "buildCommand": "NODE_ENV=production npm run build",
   "outputDirectory": "dist",
   "rewrites": [
     {
