--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
   "scripts": {
     "dev": "vite",
     "dev:watch": "concurrently \"bun run wasm:watch\" \"vite\"",
-    "build": "tsc -b && vite build",
+    "build": "NODE_ENV=production tsc -b && vite build",
+    "build:clean": "rm -rf dist && NODE_ENV=production tsc -b && vite build",
     "lint": "eslint .",
     "preview": "vite preview",
     "wasm:build": "bash make.sh",
@@ -42,7 +43,7 @@
     "tailwindcss": "^3.4.0",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.35.1",
-    "vite": "^7.0.4"
+    "vite": "^6.0.5"
   },
   "trustedDependencies": [
     "@swc/core"
