--- a/.npmrc
+++ b/.npmrc
@@ -1,4 +1,5 @@
 # Fix for Rollup optional dependencies issue on Vercel
-optional=false
+optional=true
 fund=false
 audit=false
+legacy-peer-deps=true
